samples/_failures_safe/1761521001_bdc531_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdfde01b.c: In function ‘main’:
./samples/SAFE/__tmp_bdfde01b.c:159:21: error: expected declaration or statement at end of input
  159 |                     print_matrix(&result, "A * B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_bdfde01b.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bdfde01b.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bdfde01b.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bdfde01b.c:159:21: error: expected declaration or statement at end of input
